--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -1016,10 +1016,10 @@
                                 <div>
                                     <fieldset v-if="filterShinichiKudoEpisodes" class="border border-orange-400 p-4 rounded">
                                         <legend class="font-bold mb-2">
-                                            <div class="transition-all duration-100 active:bg-blue-800 active:scale-90">
+                                            <label class="transition-all duration-100 active:bg-blue-800 active:scale-90">
                                                 <input @click="resetShinichiKudoFilters" type="checkbox" v-model="filterShinichiKudoEpisodes" class="scale-150 ml-2">
                                                 <span>شينتشي كودو ({{ ShinichiKudoEpisodesCount }})</span>
-                                            </div>                                            
+                                            </label>                                            
                                         </legend>
 
                                         <div class="ml-4 flex space-x-2">
