--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -14964,7 +14964,7 @@
                             <h1 style="font-size: 26px; font-weight: bold; color: #ff4f4f; margin-bottom: 10px;">
                                 لست منضماً إلى القناة.<br>
                                 <span style="font-size: 26px; font-weight: bold; color: #ffffff;">يرجى الانضمام إلى القناة لفتح الدليل، ثم أعد المحاولة.</span><br>
-                                <a href="https://t.me/CodeSubs" target="_blank" rel="noopener noreferrer" style="color: #00ff00; text-decoration: none; font-size: 22px; font-weight: bold;">اضغط هنا للانتقال إلى القناة</a>
+                                <a href="https://t.me/CodeSubs" target="_blank" rel="noopener noreferrer" style="color: #00ff00; text-decoration: none; font-size: 22px; font-weight: bold; margin-top: 10px;">اضغط هنا للانتقال إلى القناة</a>
                             </h1>
                             <button id="retryButton" style="padding: 15px 30px; background: linear-gradient(135deg, #007BFF, #0056b3); color: #fff; border: none; border-radius: 5px; cursor: pointer; font-size: 18px; font-weight: bold; margin-top: 20px; transition: transform 0.3s, box-shadow 0.3s;">
                                 أعد المحاولة
