--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -5168,7 +5168,7 @@
                 <button 
                     v-if="mangas && mangas.length > 0"
                     @click="openMangaModal(mangaCh)"
-                    class="mt-4 w-full py-2 bg-green-600 text-white font-bold text-lg rounded hover:bg-blue-500 transition-transform transform hover:scale-105 animate-bounce transition-all duration-100 active:scale-90">
+                    class="mt-4 w-full py-2 bg-green-600 text-white font-bold text-lg rounded hover:bg-blue-500 transition-all duration-100 hover:scale-105 active:scale-90">
                     أضغط هنا لفتح الفصل
                 </button>
             </div>
@@ -5180,7 +5180,7 @@
                 <button 
                     v-if="episodes && episodes.length > 0"
                     @click="openEpisodeModal(ep)"
-                    class="mt-4 w-full py-2 bg-teal-600 text-white font-bold text-lg rounded hover:bg-teal-500 transition-transform transform hover:scale-105 animate-bounce transition-all duration-100 active:scale-90">
+                    class="mt-4 w-full py-2 bg-teal-600 text-white font-bold text-lg rounded hover:bg-teal-500 transition-all duration-100 hover:scale-105 active:scale-90">
                     أضغط هنا لفتح الحلقة
                 </button>
             </div>
