--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -5785,7 +5785,7 @@
                                 </fieldset>
 
                                 <fieldset v-if="selectedEpisode && selectedEpisode.EpisodeSummary !== ''" class="border p-2 border-orange-400 rounded mb-2">
-                                    <legend class="font-bold cursor-pointer animate-bounce transition-all duration-100 active:scale-90" @click="toggleSpoiler">
+                                    <legend class="font-bold cursor-pointer transition-all duration-100 active:scale-90" @click="toggleSpoiler">
                                         <span class="text-lg">
                                             <span v-html="highlightSpoilerText()"></span>
                                         </span>
