--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -5429,7 +5429,7 @@
                             {{ episodeTitleHeader }}
                             <br />
                             <span v-if="isAnyFilterActive" @click="openEmptyPopup" class="inline-block text-base text-black cursor-pointer transition-all duration-100 active:scale-90">
-                                ~ (التصفية قيد التشغيل حالياً) ~
+                                (التصفية قيد التشغيل حالياً)
                             </span>
                             <br v-if="isAnyFilterActive" />
                             <span :class="['text-base', isAnyFilterActive ? 'text-white' : 'text-red-600']">
@@ -5922,7 +5922,7 @@
                         summary: false,
                     },
                     errorMessage: "",
-                    ep: 1180,
+                    ep: 1181,
                     mangaCh: 1153,
                     replacementDict: {
                     "فلم": ["فيلم",],
