--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -547,7 +547,7 @@
                                             @click="sendEpisodeToBot(video.VideoID, video.Resolution, video.Size, index, video.IntroductionTime, video.StartStoryTime, video.EpisodeSuspenseTime, video.StartSongTime, video.ChapterOneTime, video.ChapterTwoTime, video.EndSongTime, video.ChapterThreeTime, video.NextEpisodeTeaserTime, video.NextEpisodeHintTime)"
                                             class="bg-blue-500 text-white px-6 py-2 rounded hover:bg-green-500 flex items-center justify-center shadow-md disabled:opacity-50 transition-all duration-100 active:scale-90"
                                             :class="{ 'opacity-50 cursor-not-allowed': video.status === 'ratelimiting' }">
-                                            <span v-if="video.status === 'ratelimiting'">{{ video.Resolution }} ({{ video.Size }} MB)</span>
+                                            <span v-if="video.status === 'sending' && videoCountdowns[selectedEpisode.EpisodeNumber + '_' + video.VideoID]">{{ videoCountdowns[selectedEpisode.EpisodeNumber + '_' + video.VideoID] }}</span>
                                             <span v-else>{{ video.Resolution }} ({{ video.Size }} MB)</span>
                                         </button>
                                         <img 
@@ -621,7 +621,7 @@
                                             @click="sendEpisodeToBot(video.VideoID, video.Resolution, video.Size, index, video.IntroductionTime, video.StartStoryTime, video.EpisodeSuspenseTime, video.StartSongTime, video.ChapterOneTime, video.ChapterTwoTime, video.EndSongTime, video.ChapterThreeTime, video.NextEpisodeTeaserTime, video.NextEpisodeHintTime)"
                                             class="bg-amber-700 text-white px-6 py-2 rounded hover:bg-green-500 flex items-center justify-center shadow-md disabled:opacity-50 transition-all duration-100 active:scale-90"
                                             :class="{ 'opacity-50 cursor-not-allowed': video.status === 'ratelimiting' }">
-                                            <span v-if="video.status === 'ratelimiting'">{{ video.Resolution }} ({{ video.Size }} MB)</span>
+                                            <span v-if="video.status === 'sending' && videoCountdowns[selectedEpisode.EpisodeNumber + '_' + video.VideoID]">{{ videoCountdowns[selectedEpisode.EpisodeNumber + '_' + video.VideoID] }}</span>
                                             <span v-else>{{ video.Resolution }} ({{ video.Size }} MB)</span>
                                         </button>
                                         <img 
@@ -5821,7 +5821,7 @@
                                                 @click="() => { sendEpisodeToBot(video.VideoID, video.Resolution, video.Size, index, video.IntroductionTime, video.StartStoryTime, video.EpisodeSuspenseTime, video.StartSongTime, video.ChapterOneTime, video.ChapterTwoTime, video.EndSongTime, video.ChapterThreeTime, video.NextEpisodeTeaserTime, video.NextEpisodeHintTime); }"
                                                 class="bg-blue-500 text-white px-6 py-2 rounded hover:bg-blue-700 flex items-center justify-center shadow-md disabled:opacity-50 transition-all duration-100 active:scale-90"
                                                 :class="{ 'opacity-50 cursor-not-allowed': video.status === 'ratelimiting' }">
-                                                <span v-if="video.status === 'ratelimiting'">{{ video.Resolution }} ({{ video.Size }} MB)</span>
+                                                <span v-if="video.status === 'sending' && videoCountdowns[selectedEpisode.EpisodeNumber + '_' + video.VideoID]">{{ videoCountdowns[selectedEpisode.EpisodeNumber + '_' + video.VideoID] }}</span>
                                                 <span v-else>{{ video.Resolution }} ({{ video.Size }} MB)</span>
                                             </button>
                                             <img 
@@ -5929,7 +5929,7 @@
                     },
                     errorMessage: "",
                     statusClearTimeout: 2000,
-
+                    videoCountdowns: {}, // Track countdown timers per video
                     ep: 1181,
                     mangaCh: 1153,
                     replacementDict: {
@@ -14684,6 +14684,19 @@
 
                     this.selectedEpisode.EpisodeVideosIDs[index].status = 'sending';
 
+                    // Start countdown for the clicked button
+                    const countdownKey = `${this.selectedEpisode.EpisodeNumber}_${videoID}`;
+                    this.$set(this.videoCountdowns, countdownKey, Math.ceil(this.statusClearTimeout / 1000));
+                    
+                    const countdownInterval = setInterval(() => {
+                        if (this.videoCountdowns[countdownKey] > 0) {
+                            this.$set(this.videoCountdowns, countdownKey, this.videoCountdowns[countdownKey] - 1);
+                        } else {
+                            clearInterval(countdownInterval);
+                            this.$delete(this.videoCountdowns, countdownKey);
+                        }
+                    }, 1000);
+
                     try {
                         await this.sendVideoResponse(chatId, videoID, caption);
                         this.selectedEpisode.EpisodeVideosIDs[index].status = 'success';
@@ -14716,6 +14729,10 @@
                                 }
                             });
                         }
+                        
+                        // Clean up countdown
+                        clearInterval(countdownInterval);
+                        this.$delete(this.videoCountdowns, countdownKey);
                     }, this.statusClearTimeout);
                 },
 
